--- a/20106371_NguyenVanHoang_week6/package.json
+++ b/20106371_NguyenVanHoang_week6/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -11,9 +11,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-paper": "4.9.2",
     "@expo/vector-icons": "^14.0.3",
-    "expo-linear-gradient": "~13.0.2"
+    "react-native-vector-icons": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
